<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_delete_note">Once you confirm, you will be automatically logged out and not able to access your account anymore and all of your account data will be permanently deleted.</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_caps">ADD</string>
    <string name="add_product_worth">Add products worth</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_cart_caps">ADD TO CART</string>
    <string name="additional_price">Additional Price</string>
    <string name="address_caps">ADDRESS</string>
    <string name="address_line">ADDRESS (with post code if applicable)</string>
    <string name="address_line_optional">ADDRESS LINE (OPTIONAL)</string>
    <string name="address_splitter">,</string>
    <string name="alert">Alert</string>
    <string name="and">&amp;</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apartment_caps">APARTMENT</string>
    <string name="app_code">cheezious</string>
    <string name="app_name">Cheezious</string>
    <string name="app_package">com.blink.cheezious</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="appsflyer_key">abc</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_delete_all_carts_items">Are you sure you want to clear cart?</string>
    <string name="are_you_sure_you_want_to_exit_the_app">Are you sure you want to exit the app?</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="are_you_sure_you_want_to_place_this_order">Are you sure you want to place this order?</string>
    <string name="asap_caps">ASAP</string>
    <string name="authorizing">Authorizing</string>
    <string name="base_url" />
    <string name="best_deal_You_got_the_lowest_delivery_fee">Best deal! You got the lowest delivery fee of</string>
    <string name="beyond_radius">Address not in your selected region. Please select correct location from home screen.</string>
    <string name="billing_details_add">+ ADD</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="branch">Branch:</string>
    <string name="building_caps">BUILDING</string>
    <string name="burn_loyalty">Use Loyalty Points:</string>
    <string name="button_clear">Clear</string>
    <string name="button_done">Done</string>
    <string name="button_pay">Pay</string>
    <string name="call_me">Call Me</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="cancelled_caps">CANCELLED</string>
    <string name="card">Card</string>
    <string name="card_discount">Card Discount</string>
    <string name="card_icon_resource">card_icon*</string>
    <string name="card_mismatch_error">Card Mismatch Error</string>
    <string name="card_number">Card number</string>
    <string name="card_on_delivery">Card on Delivery</string>
    <string name="cash">Cash</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="change">Change</string>
    <string name="change_address_note">To change your area, please do it from the main menu screen.</string>
    <string name="change_location">Change Location</string>
    <string name="change_password">Change Password</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_discount">Check Discount</string>
    <string name="checkout">Checkout</string>
    <string name="chip_text">Chip text</string>
    <string name="choose">Choose</string>
    <string name="choose_your_delivery_address_caps">CHOOSE YOUR DELIVERY ADDRESS</string>
    <string name="city_caps">CITY</string>
    <string name="clear">Clear</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="clear_search_button_content_description">Clear search</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="closed_at_the_moment">Closed at the moment</string>
    <string name="closed_at_the_moment_pre_orders_available">Closed at the moment. Pre-orders available.</string>
    <string name="code_already_used">Code already used.</string>
    <string name="collect_from_branch">Collect from branch:</string>
    <string name="com.crashlytics.android.build_id">e816cc2f1927434bb2a26a34b9bf9424</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="com_mixpanel_android_close">Close</string>
    <string name="com_mixpanel_android_done">Done</string>
    <string name="com_mixpanel_android_exit">Exit</string>
    <string name="com_mixpanel_android_logo">By Mixpanel</string>
    <string name="com_mixpanel_android_notification_image">Image not displayed</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="continue_">Continue</string>
    <string name="email_caps">EMAIL</string>
    <string name="enter_new_email_here">Enter new email here</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="favourites">Favourites</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_email_caps">NEW EMAIL</string>
    <string name="new_phone_caps">NEW PHONE</string>
    <string name="no_dish_found">No product found!</string>
    <string name="no_dish_found_error">Sorry, it looks like you didn\'t mark any product as favourite</string>
    <string name="or_caps">OR</string>
    <string name="phone">phone</string>
    <string name="phone_caps">PHONE</string>
    <string name="please_confirm_your_country_code_and_enter_your_mobile_number">Please confirm your country code and enter your mobile number</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip_login">Continue as Guest</string>
    <string name="update">Update</string>
    <string name="welcome">Welcome</string>
</resources>