<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="#ffffffff"
    android:clickable="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:textSize="28.0dip"
        android:textColor="#ff000000"
        android:id="@+id/text_welcome"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:layout_marginBottom="10.0dip"
        android:text="@string/welcome"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20.0dip"
        android:layout_above="@+id/layout_login"
        android:layout_below="@+id/text_welcome">

        <TextView
            android:textSize="35.0dip"
            android:textColor="#ff000000"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:padding="20.0dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/logo_restaurant"
            android:scaleType="centerInside" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:layout_marginBottom="20.0dip"
        android:layout_above="@+id/text_skip"
        android:paddingStart="12.0dip"
        android:paddingEnd="12.0dip"
        android:layout_marginStart="20.0dip"
        android:layout_marginEnd="20.0dip"
        android:elevation="5.0dip">

        <EditText
            android:textSize="14.0dip"
            android:textColor="#d0000000"
            android:gravity="left"
            android:id="@+id/text_email"
            android:background="@drawable/bg_edit_text_white"
            android:paddingTop="15.0dip"
            android:paddingBottom="15.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:imeOptions=""
            android:textAlignment="5"
            android:paddingStart="10.0dip"
            android:paddingEnd="10.0dip" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:textSize="14.0dip"
                android:textColor="#d0000000"
                android:gravity="left"
                android:id="@+id/text_password"
                android:background="@drawable/bg_edit_text_white"
                android:paddingTop="15.0dip"
                android:paddingBottom="15.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textAlignment="5"
                android:paddingStart="10.0dip"
                android:paddingEnd="10.0dip" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:textSize="13.0dip"
            android:textColor="#ff555555"
            android:layout_gravity="right"
            android:id="@+id/text_forgot"
            android:paddingTop="10.0dip"
            android:paddingBottom="10.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:text="@string/forgot_password"
            android:paddingStart="10.0dip" />

        <androidx.appcompat.widget.AppCompatButton
            android:textSize="15.0dip"
            android:textColor="@color/colorPrimaryText"
            android:gravity="center"
            android:id="@+id/btn_login"
            android:background="@drawable/bg_btn_blue"
            android:paddingTop="15.0dip"
            android:paddingBottom="15.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="0.0dip"
            android:text="@string/login"
            android:textAllCaps="false"
            android:paddingStart="10.0dip"
            android:paddingEnd="10.0dip" />

        <androidx.appcompat.widget.AppCompatButton
            android:textSize="15.0dip"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:id="@+id/btn_sign_up"
            android:background="@drawable/bg_btn_green_border"
            android:paddingTop="15.0dip"
            android:paddingBottom="15.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:minHeight="0.0dip"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:paddingStart="10.0dip"
            android:paddingEnd="10.0dip" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_facebook"
        android:background="@drawable/logo_fb_btn"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginBottom="30.0dip"
        android:layout_above="@+id/text_or"
        android:layout_marginStart="40.0dip"
        android:layout_marginEnd="40.0dip" />

    <TextView
        android:textSize="18.0dip"
        android:textColor="#ff000000"
        android:id="@+id/text_or"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30.0dip"
        android:text="@string/or_caps"
        android:layout_centerHorizontal="true" />

    <TextView
        android:textSize="14.0dip"
        android:id="@+id/text_skip"
        android:padding="10.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:text="@string/skip_login"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
