<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
    android:orientation="vertical"
    android:background="#ffe9e9e9"
    android:clickable="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:orientation="vertical"
        android:padding="20.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:textSize="13.0sp"
            android:textColor="#ff555555"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/email_caps"
            />
        <TextView
            android:textSize="13.0sp"
            android:textColor="#d0000000"
            android:gravity="left"
            android:id="@+id/text_email"
            android:background="@drawable/bg_edit_text_white"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:inputType="textEmailAddress"
            android:textAlignment="5"
            />
        <TextView
            android:textSize="13.0sp"
            android:textColor="#ff555555"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:text="@string/phone_caps"
            />
        <TextView
            android:textSize="13.0sp"
            android:textColor="#d0000000"
            android:gravity="left"
            android:id="@+id/text_phone"
            android:background="@drawable/bg_edit_text_white"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:textAlignment="5"
            />
        <TextView
            android:textSize="13.0sp"
            android:textColor="#ff555555"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40.0dip"
            android:text="@string/new_email_caps"
            />
        <EditText
            android:textSize="13.0sp"
            android:textColor="#d0000000"
            android:gravity="left"
            android:id="@+id/text_email_new"
            android:background="@drawable/bg_edit_text_white"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:hint="@string/enter_new_email_here"
            android:inputType="textEmailAddress"
            android:textAlignment="5"
            />
        <TextView
            android:textSize="13.0sp"
            android:textColor="#ff555555"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:text="@string/new_phone_caps"
            />
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/bg_edit_text_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            >
            <com.hbb20.CountryCodePicker
                android:textSize="13.0sp"
                android:id="@+id/countryCodeHolder"
                android:background="@null"
                android:paddingTop="-3.0dip"
                android:paddingBottom="-3.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_autoFormatNumber="true"
                app:ccp_defaultNameCode="pk"
                app:ccp_hintExampleNumber="true"
                app:ccp_showNameCode="false"
                app:ccp_textSize="13.0sp"
                />
            <EditText
                android:textSize="13.0sp"
                android:gravity="left|center"
                android:id="@+id/text_phone_new"
                android:background="@null"
                android:padding="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:editable="false"
                android:inputType="phone"
                android:textAlignment="5"
                />
        </LinearLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="17.0dip"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:id="@+id/btn_update"
        android:background="@drawable/bg_btn_grad_green"
        android:paddingTop="15.0dip"
        android:paddingBottom="15.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="0.0dip"
        android:text="@string/update"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:layout_alignParentStart="true"
        />
</RelativeLayout>
