<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
    android:background="#ffffffff"
    android:clickable="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ImageView
        android:padding="20.0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20.0dip"
        android:src="@drawable/logo_restaurant"
        android:scaleType="centerInside"
        android:layout_above="@+id/layout_login"
        android:layout_alignParentTop="true"
        />
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:layout_marginBottom="20.0dip"
        android:layout_above="@+id/text_skip"
        android:paddingStart="6.0dip"
        android:paddingEnd="6.0dip"
        android:layout_marginStart="20.0dip"
        android:layout_marginEnd="20.0dip"
        android:elevation="5.0dip"
        >
        <TextView
            android:textSize="17.0dip"
            android:textStyle="bold"
            android:textColor="#ff000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_mobile_number"
            />
        <TextView
            android:textColor="#ff777777"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:layout_marginBottom="10.0dip"
            android:text="@string/please_confirm_your_country_code_and_enter_your_mobile_number"
            />
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/bg_edit_text_white"
            android:paddingTop="7.0dip"
            android:paddingBottom="7.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:paddingStart="3.0dip"
            android:paddingEnd="3.0dip"
            >
            <com.hbb20.CountryCodePicker
                android:textSize="14.0dip"
                android:id="@+id/countryCodeHolder"
                android:background="@null"
                android:paddingTop="-3.0dip"
                android:paddingBottom="-3.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_autoFormatNumber="true"
                app:ccp_defaultNameCode="pk"
                app:ccp_hintExampleNumber="true"
                app:ccp_showNameCode="false"
                app:ccp_textSize="14.0dip"
                />
            <EditText
                android:textSize="14.0dip"
                android:gravity="left|center"
                android:id="@+id/text_contact"
                android:background="@null"
                android:padding="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:singleLine="true"
                android:editable="false"
                android:inputType="phone"
                android:imeOptions=""
                android:textAlignment="5"
                />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="15.0dip"
            android:textColor="@color/colorPrimaryText"
            android:gravity="center"
            android:id="@+id/btn_login"
            android:background="@drawable/bg_btn_blue"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="20.0dip"
            android:text="@string/continue_"
            android:layout_above="@+id/text_skip"
            android:textAllCaps="false"
            />
    </LinearLayout>
    <TextView
        android:textSize="14sp"
        android:id="@+id/text_skip"
        android:padding="10.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:text="@string/skip_login"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
