<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
    android:orientation="vertical"
    android:id="@+id/parent_layout"
    android:background="#ffe9e9e9"
    android:clickable="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/header"
        android:background="#ffffffff"
        android:layout_width="fill_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:elevation="5.0dip"
        >
        <ImageView
            android:layout_gravity="left"
            android:id="@+id/btn_back"
            android:padding="18.0dip"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:src="@drawable/icon_arrow_back"
            android:scaleType="centerInside"
            android:elevation="5.0dip"
            />
        <TextView
            android:textSize="20.0dip"
            android:textColor="#ff000000"
            android:ellipsize="end"
            android:gravity="center"
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourites"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-medium"
            />
    </RelativeLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/layout_error"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="5.0dip"
        >
        <TextView
            android:id="@+id/text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_dish_found"
            />
        <TextView
            android:gravity="center"
            android:id="@+id/text_error_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:text="@string/no_dish_found_error"
            android:lineSpacingExtra="7.0dip"
            />
    </LinearLayout>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="5.0dip"
        app:indicatorColor="#ff999999"
        app:indicatorName="LineSpinFadeLoaderIndicator"
        style="@style/AVLoadingIndicatorView"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/recyclerView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@null"
        android:layout_below="@+id/header"
        layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />
</RelativeLayout>
